@@ -110,6 +110,9 @@ ELinks 0.12pre5.GIT now:
 
 To be released as 0.12pre6 or 0.12rc1.
 
+* major bug 764: Correctly initialize options on big-endian 64-bit
+  systems.
+
 Bugs that should be removed from NEWS before the 0.12.0 release:
 
 * critical bug 943: Don't let user JavaScripts call any methods of
